--- a/content/publications/evo2023.md
+++ b/content/publications/evo2023.md
@@ -4,6 +4,6 @@ title: "SketchSynth: cross-modal control of sound synthesis"
 authors: ["Sebastian L\xf6bbers","Louise Thorpe", "Gy\xf6rgy Fazekas"]
 date: "2023-04-12"
 in: "Proceedings of 12th International Conference on Computational Intelligence in Music, Sound, Art and Design (EvoMUSART)"
-link: "https://link.springer.com/conference/evomusart"
+link: "https://link.springer.com/chapter/10.1007/978-3-031-29956-8_11"
 asset: "SketchSynth_cross-modal_control_of_sound_synthesis.pdf"
 ---
